--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -47,25 +47,29 @@ html
     &::-webkit-scrollbar
         display none
 h1
-    minion(57px, black, bold)
+    minion(60px, black, bold)
     text-align center
     margin-bottom -8px
 h2
-    minion(50px, theme, bold)
+    minion(54px, theme, bold)
 h3
-    minion(40px, theme, bold)
+    minion(44px, theme, bold)
 h4
-    minion(30px, theme, bold)
+    minion(34px, theme, bold)
     letter-spacing -1px
 h5
-    perpetua(26px, theme, bold, italic)
+    perpetua(28px, theme, bold, italic)
     letter-spacing -1px
 p
-    perpetua(26px, main-text)
+    perpetua(28px, main-text)
 b
-    perpetua(26px, main-text, bold)
+    perpetua(28px, main-text, bold)
 i
-    perpetua(28px, main-text,, italic)
+    perpetua(30px, main-text,, italic)
+a
+    color main-text
+    text-decoration none
+    font-weight bold
 .center
     text-align center
 .comment
@@ -74,12 +78,11 @@ i
 body
     display flex
     flex-flow column
-    justify-content space-evenly
+    justify-content space-between
     margin 64px auto
     max-width 1070px
     min-width 1070px
     height 1070px * (11/8.5)
-    border 4px solid theme
 .title
     margin 0 auto
 .issue
@@ -119,7 +122,7 @@ body
         margin auto 180px
         margin-bottom 24px
     &__info
-        perpetua(24px, theme, bold, italic)
+        perpetua(28px, theme, bold, italic)
         text-align center
         margin 0 210px
 .divider
@@ -132,14 +135,14 @@ body
     text-align center
     width 200px
 .info
-    perpetua(24px,  rgba(main-text, 0.6), bold)
+    perpetua(28px,  rgba(main-text, 0.6), bold)
     margin 0 auto
 .programs
     margin 0 16px
     &__sub
         text-align center
-        perpetua(24px, main-text, bold, italic)
-        margin 0 200px 32px
+        perpetua(28px, main-text, bold, italic)
+        margin 0 180px 32px
     &__content
         display flex
         flex-flow row wrap
